Exercise 9: Pact provider tests